[81] Add content to skills section

--- a/app/assets/stylesheets/variables.sass
+++ b/app/assets/stylesheets/variables.sass
@@ -4,3 +4,4 @@ $divider-title: rgb(163, 197, 255)
 $light-text: rgb(237, 252, 255)
 $label-switch: rgb(0, 73, 96)
 $selected-section: rgb(5, 164, 214)
+$dark-text: rgb(2, 2, 42)
