--- a/app/assets/stylesheets/application/skill/skill__image/skill__image.sass
+++ b/app/assets/stylesheets/application/skill/skill__image/skill__image.sass
@@ -1,8 +1,3 @@
 .skill__image
-  width: 8vw
-  height: auto
-  margin-bottom: 5px
-
-@media (max-width: 400px)
-  .skill__image
-    width: 15vw
+  width: auto
+  height: inherit
