--- a/app/assets/stylesheets/application/wrapper/wrapper_skills.sass
+++ b/app/assets/stylesheets/application/wrapper/wrapper_skills.sass
@@ -1,12 +1,12 @@
 .wrapper_skills
   display: flex
-  justify-content: space-around
+  justify-content: center
   align-items: center
-  height: 90vh
+  height: 80vh
   width: 100vw
   padding-top: 10vh
   padding-bottom: 10vh
-  flex-wrap: wrap
+  flex-direction: column
 
 @media (max-width: 700px)
   .wrapper_skills
