--- a/app/assets/stylesheets/application/skill/skill.sass
+++ b/app/assets/stylesheets/application/skill/skill.sass
@@ -2,6 +2,45 @@
   display: flex
   flex-direction: column
   align-items: center
-  padding: 1vw
   box-shadow: 0 0 10px rgba(0,0,0,0.5)
   color: $dark-text
+  padding: 2vw
+  margin: 3vh 2vw
+
+@media (max-width: 2565px)
+  .skill
+    margin: 2vh 1vw
+    width: 6vw
+    height: 6vw
+
+@media (max-width: 1445px)
+  .skill
+    margin: 2vh 1vw
+    width: 6vw
+    height: 6vw
+
+@media (max-width: 1025px)
+  .skill
+    margin: 2vh 2vw
+    width: 9vw
+    height: 9vw
+
+@media (max-width: 770px)
+  .skill
+    width: 9vw
+    height: 9vw
+
+@media (max-width: 430px)
+  .skill
+    width: 12vw
+    height: 12vw
+
+@media (max-width: 380px)
+  .skill
+    width: 12vw
+    height: 12vw
+
+@media (max-width: 325px)
+  .skill
+    width: 12vw
+    height: 12vw
