--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -37,71 +37,46 @@ label.label-switch.nav-link for='skills_radiobox'
 
 .bg.bg_skills
   .wrapper.wrapper_skills
+    h3.heading_skills.light-text Skillz
     .skills
       .skill.skill_language
         = inline_svg('flags/ru.svg', class: 'skill__image')
-        .skill__level = t('levels.native')
-        h3.skill__name = t('languages.russian')
+        / .skill__level = t('levels.native')
+        / h3.skill__name = t('languages.russian')
 
-    .skills
       .skill.skill_language
         = inline_svg('flags/en.svg', class: 'skill__image')
-        .skill__level = t('levels.intermediate')
-        h3.skill__name = t('languages.english')
+        / .skill__level = t('levels.intermediate')
+        / h3.skill__name = t('languages.english')
 
-    .skills
       .skill.skill_language
         = inline_svg('flags/de.svg', class: 'skill__image')
-        .skill__level = t('levels.beginner')
-        h3.skill__name = t('languages.german')
+        / .skill__level = t('levels.beginner')
+        / h3.skill__name = t('languages.german')
 
-    .skills
       .skill.skill_git
         = inline_svg('skills/git.svg', class: 'skill__image')
-        progress.skill__progress value='35' max='100'
-        h3.skill__name Git
 
-    .skills
       .skill.skill_backend
         = inline_svg('skills/rails.svg', class: 'skill__image')
-        progress.skill__progress value='35' max='100'
-        h3.skill__name Ruby on Rails
 
-    .skills
       .skill.skill_frontend
         = inline_svg('skills/html.svg', class: 'skill__image')
-        progress.skill__progress value='35' max='100'
-        h3.skill__name HTML
 
-    .skills
       .skill.skill_frontend
         = inline_svg('skills/css.svg', class: 'skill__image')
-        progress.skill__progress value='35' max='100'
-        h3.skill__name CSS
 
-    .skills
       .skill.skill_frontend
         = inline_svg('skills/sass.svg', class: 'skill__image')
-        progress.skill__progress value='35' max='100'
-        h3.skill__name Sass
 
-    .skills
       .skill.skill_frontend
         = inline_svg('skills/bootstrap.svg', class: 'skill__image')
-        progress.skill__progress value='35' max='100'
-        h3.skill__name Bootstrap
 
-    .skills
       .skill.skill_frontend
         = inline_svg('skills/javascript.svg', class: 'skill__image')
-        progress.skill__progress value='35' max='100'
-        h3.skill__name JavaScript
 
-    .skills
       .skill.skill_frontend
         = inline_svg('skills/jquery.svg', class: 'skill__image')
-        progress.skill__progress value='35' max='100'
-        h3.skill__name jQuery
 
 / projects section
 input#projects_radiobox.radiobox-switch.radiobox-switch_projects type='radio' name='section'
