--- a/app/assets/stylesheets/application/skill/skill.sass
+++ b/app/assets/stylesheets/application/skill/skill.sass
@@ -3,9 +3,14 @@
   flex-direction: column
   align-items: center
   box-shadow: 0 0 10px rgba(0,0,0,0.5)
-  color: $dark-text
   padding: 2vw
   margin: 3vh 2vw
+  transition-duration: .5s
+  transition-timing-function: ease
+  cursor: pointer
+
+  &:hover
+    transform: translateY(-10px)
 
 @media (max-width: 2565px)
   .skill
