[83] Add content to projects section

--- a/app/assets/stylesheets/variables.sass
+++ b/app/assets/stylesheets/variables.sass
@@ -5,3 +5,5 @@ $light-text: rgb(237, 252, 255)
 $label-switch: rgb(0, 73, 96)
 $selected-section: rgb(5, 164, 214)
 $dark-text: rgb(2, 2, 42)
+$label-switch__icon_hover: rgb(0, 19, 46)
+$projects-button: rgb(49, 145, 223)
