--- a/app/assets/stylesheets/application/label-switch/label-switch.sass
+++ b/app/assets/stylesheets/application/label-switch/label-switch.sass
@@ -6,6 +6,12 @@
   background-color: $label-switch
   text-align: center
 
+  &:hover
+    background-color: lighten( $label-switch, 40%)
+
+  &:hover .label-switch__icon
+    fill: $label-switch__icon_hover
+
 @media (max-width: 360px)
   .label-switch
     width: 14.2857vw
