--- a/app/assets/stylesheets/application/wrapper/wrapper_projects.sass
+++ b/app/assets/stylesheets/application/wrapper/wrapper_projects.sass
@@ -1,13 +1,14 @@
-.wrapper_skills
+.wrapper_projects
   display: flex
+  flex-direction: column
   justify-content: center
   align-items: center
-  height: 80vh
+  height: 95vh
   width: 100vw
-  padding-top: 10vh
+  margin-top: 5vh
   padding-bottom: 10vh
-  flex-direction: column
 
 @media (max-width: 700px)
-  .wrapper_skills
+  .wrapper_projects
+    margin-top: 2vh
     padding-bottom: 0
