--- a/app/assets/stylesheets/variables.sass
+++ b/app/assets/stylesheets/variables.sass
@@ -7,3 +7,4 @@ $selected-section: rgb(5, 164, 214)
 $dark-text: rgb(2, 2, 42)
 $label-switch__icon_hover: rgb(0, 19, 46)
 $projects-button: rgb(49, 145, 223)
+$profiles-icon: rgb(255, 255, 255)
