[84] Add content to the links section

--- a/app/assets/stylesheets/application/profiles/profiles__icon/profiles__icon.sass
+++ b/app/assets/stylesheets/application/profiles/profiles__icon/profiles__icon.sass
@@ -1,4 +1,7 @@
 .profiles__icon
   width: 70px
   height: 70px
-  fill: $profiles-icon
+  margin-left: 1vw
+  margin-right: 1vw
+  background-color: white
+  padding: 1vw
