--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -102,7 +102,7 @@ label.label-switch.nav-link for='projects_radiobox'
         h4 = t('.in_progress')
 
 / links section
-input#links_radiobox.radiobox-switch.radiobox-switch_links type='radio' name='section' checked='checked'
+input#links_radiobox.radiobox-switch.radiobox-switch_links type='radio' name='section'
 label.label-switch.nav-link for='links_radiobox'
   span = inline_svg('icons/links.svg', class: 'label-switch__icon')
 
@@ -140,13 +140,38 @@ label.label-switch.nav-link for='links_radiobox'
           = inline_svg('icons/codecademy.svg', class: 'profiles__icon')
         a href='https://www.codewars.com/users/Andrew%20Gladilin' target='_blank'
           = image_tag('icons/codewars.png', class: 'profiles__icon')
+        a href='https://www.freecodecamp.com/derrsaff' target='_blank'
+          = inline_svg('icons/freecodecamp.svg', class: 'profiles__icon')
+        a href='#' target='_blank'
+          = inline_svg('icons/linkedin.svg', class: 'profiles__icon')
 
 / contacts
-input#contacts_radiobox.radiobox-switch.radiobox-switch_contacts type='radio' name='section'
+input#contacts_radiobox.radiobox-switch.radiobox-switch_contacts type='radio' name='section' checked='checked'
 label.label-switch.nav-link for='contacts_radiobox'
   span = inline_svg('icons/contacts.svg', class: 'label-switch__icon')
 
 .bg.bg_contacts
+  .wrapper.wrapper_contacts
+    .contacts.dark-text
+      div.contacts__email
+        javascript:
+          var cxqvyhf = ['l',' ','i','i','"','g','m','l','g','d','c','"','l','g','"','w','=','m','d','a','>','@','r','l','e','h','s','a','i','e','o',':','l','f','<','/','>','n','i','l','m','l','c','n','d','@','n','d','a','m','r',' ','i','e','a','a','.','r','<','i','c','"','i','m','g','o','a','i','l','s','m','o','a','.','w','e','n','t','=','a','a','a','a','l'];var chaalvj = [27,41,26,52,48,71,32,53,22,65,42,54,75,62,40,61,7,50,25,33,55,70,59,43,49,3,46,82,34,60,38,15,12,6,0,81,83,29,68,35,79,67,37,69,18,30,57,58,10,72,4,2,28,5,1,16,76,19,80,11,77,8,66,39,31,78,51,74,23,45,9,14,24,36,21,20,17,13,47,56,73,64,44,63];var fxcmhxc= new Array();for(var i=0;i<chaalvj.length;i++){fxcmhxc[chaalvj[i]] = cxqvyhf[i]; }for(var i=0;i<fxcmhxc.length;i++){document.write(fxcmhxc[i]);}
+      noscript
+        | Please enable Javascript to see the email address
+      a href='https://vk.com/gladilinandrew' target='_blank'
+        = inline_svg('icons/vk.svg', class: 'contacts__icon icon_vk')
+      a href='https://www.facebook.com/gladilinandrew' target='_blank'
+        = inline_svg('icons/facebook.svg', class: 'contacts__icon icon_facebook')
+      a href='https://twitter.com/DerrSaff' target='_blank'
+        = inline_svg('icons/twitter.svg', class: 'contacts__icon icon_twitter')
+      a href='https://www.instagram.com/derr_saff/' target='_blank'
+        = inline_svg('icons/instagram.svg', class: 'contacts__icon icon_instagram')
+      a href='https://www.goodreads.com/derrsaff' target='_blank'
+        = inline_svg('icons/goodreads.svg', class: 'contacts__icon icon_goodreads')
+      a href='http://steamcommunity.com/id/derrsaff/' target='_blank'
+        = inline_svg('icons/steam.svg', class: 'contacts__icon icon_steam')
+      a href='https://ru.wikipedia.org/wiki/%D0%A3%D1%87%D0%B0%D1%81%D1%82%D0%BD%D0%B8%D0%BA:Derr_Saff' target='_blank'
+        = inline_svg('icons/wikipedia.svg', class: 'contacts__icon icon_wikipedia')
 
 .language-switch
   = inline_svg "flags/#{params[:locale]}.svg", class: 'language-switch__icon'
