--- a/app/assets/stylesheets/application/profiles/profiles__icon/profiles__icon.sass
+++ b/app/assets/stylesheets/application/profiles/profiles__icon/profiles__icon.sass
@@ -3,5 +3,8 @@
   height: 70px
   margin-left: 1vw
   margin-right: 1vw
-  background-color: white
-  padding: 1vw
+  fill: white
+
+  &:hover
+    filter: brightness(80%)
+  // padding: 1vw
