--- a/app/assets/stylesheets/application/specials-item/specials-item.sass
+++ b/app/assets/stylesheets/application/specials-item/specials-item.sass
@@ -3,9 +3,12 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  background-color: rgb(255, 211, 79)
+  background-color: rgb(61, 87, 223)
   padding: 1vw
   height: 10vw
   width: 10vw
   margin: 1vh 1vw
   border-radius: 50%
+
+  &:hover
+    filter: brightness(120%)
