--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,63 @@
+html {
+  font-size: 0.625rem;
+}
 
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  border: 1px grey solid;
+  border-radius: 1%;
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.table {
+  border-collapse: collapse;
+  border: 1px solid #dbdbdb;
+  font-size: 1.5rem;
+}
+.table td {
+  padding: 0.5rem;
+}
+
+.image {
+  width: 128px;
+  height: 128px;
+  border: 1px grey solid;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.icon {
+  height: 3rem;
+  width: 3rem;
+  margin: 0.5rem;
+}
+
+ul {
+  margin: 0;
+  padding-left: 2rem;
+}
+
+.personal-data {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.socials {
+  display: flex;
+  flex-direction: column;
+}
