Align things in the page center

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,7 +12,8 @@ body {
 
 .App {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .personal_data {
